# autonomous-research-agent

./: LICENSE  README.md  app.py  config.py  pyproject.toml  requirements.txt  test_gemini.py  test_tavily.py
database/: memory.py
services/: gemini_service.py  markdown_service.py  pdf_service.py  tavily_service.py
tests/: test_app.py
utils/: deduplication.py
