[project]
name = "autonomous-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fpdf2>=2.8.7",
    "google-genai>=2.10.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.26",
]
